--- a/CH01/07.html
+++ b/CH01/07.html
@@ -3,7 +3,7 @@
 <body>
     <p>判斷是不是需要大寫的 const</p>
     <script>
-        const bIRTHDAY = '07.12.1900';
+        const BIRTHDAY = '07.12.1900';
         const age = someCode(birthday);
                 </script>
 </body>
