--- a/CH01/project.html
+++ b/CH01/project.html
@@ -421,7 +421,7 @@
 
 
 
-                // 將建立的報告物件存為record
+                // 將建立的報告物件存為record，report變數會一直被覆蓋，存入陣列就可以保留了
                 this.records.push(report);
 
                 
